--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,3 +1,4 @@
-<a href="{% url 'index' %}"><h1>Learning Log</h1></a>
+<a href="{% url 'index' %}">Learning Log</a> -
+<a href="{% url 'topics' %}">Tópicos</a>
 
 {% block content %}{% endblock content %}
