--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,7 +1,8 @@
 {% extends "learning_logs/base.html" %}
 
 {% block content %}
-    Tópicos:
+
+    <p>Tópicos:</p>
 
     <ul>
         {% for topic in topics %}
@@ -12,4 +13,6 @@
             <li>Não há tópicos adicionados.</li> 
         {% endfor %}
     </ul>
+
+    <a href="{% url 'new_topic' %}"> Adicionar novos tópicos </a>
 {% endblock content %}
