--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -16,6 +16,9 @@
         <li>
             <p>{{ entry.date_added | date:"M d, Y H:i"}}</p>
             <p>{{ entry.text | linebreaks }}</p>
+            <p>
+                <a href="{% url 'edit_entry' entry.id %}"> Editar anotação </a>
+            </p>
         </li>
 
         {% empty %}
