--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,4 +1,11 @@
-<a href="{% url 'index' %}">Learning Log</a> -
-<a href="{% url 'topics' %}">Tópicos</a>
+<p>
+    <a href="{% url 'index' %}">Learning Log</a> -
+    <a href="{% url 'topics' %}">Tópicos</a> -
+    {% if user.is_authenticated %}
+        Olá, {{ user.username }}
+    {% else %}
+        <a href="{% url 'login' %}"> Entrar </a>
+    {% endif %}
+</p>
 
 {% block content %}{% endblock content %}
