--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -3,7 +3,9 @@
     <a href="{% url 'topics' %}">Tópicos</a> -
     {% if user.is_authenticated %}
         Olá, {{ user.username }}
+        <a href="{% url 'logout' %}"> Sair </a>
     {% else %}
+        <a href="{% url 'register' %}"> Registrar </a> -
         <a href="{% url 'login' %}"> Entrar </a>
     {% endif %}
 </p>
