added_style_login-page

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -46,9 +46,16 @@
                 </div>
             </div>
         </nav>
+        <div class="container">
+            
+            <div> 
+                {% block header %} {% endblock header %} 
+            </div>
+            <div> 
+                {% block content %} {% endblock content %} 
+            </div>
+            
+        </div>
     </body>
 
 </html>
-
-
-{% block content %}{% endblock content %}
