--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,5 +1,18 @@
 {% extends "learning_logs/base.html" %}
 
+{% block header%}
+
+    <div class="jumbotron" > 
+        <h1> Acompanhe seu aprendizado.</h1>
+    </div>
+
+{% endblock header %}
+
+
 {% block content %}
-    <p>Essa aplicação te ajudará a organizar seus estudos</p>
+
+    <h3>  <a href=" url 'register' "> 
+        Crie uma conta </a> para utilizar o Learning Log e listar seus tópicos. 
+    </h3>
+
 {% endblock content %}
