--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,16 +1,22 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+{% block header %}
+    <h3> Faça login para continuar. </h3>
+{% endblock header %}
 
 {% block content %}
 
     {% if form.errors %}
-        <p> Login ou senha estão incorretos. Por favor, tente novamente. </p>
+        <p> Login ou senha estão incorretos. Por favor, tente novamente3 </p>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
+    <form action="{% url 'login' %}" method="post" class="form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% bootstrap_form form %}
 
-        <button name="submit"> Entrar </button>
+        {% buttons %} 
+            <button name="submit" class="btn btn-primary"> Entrar </button>
+        {% endbuttons %}
         <input type="hidden" name="next" value="{% url 'index' %}"/>
     </form>
 
