--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,15 +1,23 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h1><a href="{% url 'topic' topic.id %}">{{ topic }} </a></h1>
+{% endblock header %}
 
 {% block content %}
 
-<p><a href="{% url 'topic' topic.id %}">{{ topic }} </a></p>
 
-<p> Editar Anotação: </p>
 
-<form action="{% url 'edit_entry' entry.id %}" method="post">
+<h3> Editar Anotação: </h3>
+
+<form action="{% url 'edit_entry' entry.id %}" method="post" class="form">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button name="submit"> Salvar </button>
+    {% bootstrap_form form %}
+
+    {% buttons%}
+        <button name="submit"  class="btn btn-primary" > Salvar </button>
+    {% endbuttons %}
 </form>
 
 {% endblock content %}
