--- a/learning_logs/templates/learning_logs/new_entry.html
+++ b/learning_logs/templates/learning_logs/new_entry.html
@@ -1,15 +1,24 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+
+    <h1><a href="{% url 'topic' topic.id %}">{{ topic }}</a></h1h3
+
+{% endblock header %}
 
 {% block content %}
 
-    <p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
+    <p></p>
 
-    <p>Adicione uma nova entrada: </p>
+    <h3>Adicione uma nova entrada: </h3>
 
-    <form action="{% url 'new_entry' topic.id %}" method="post"> 
+    <form action="{% url 'new_entry' topic.id %}" method="post" class="form"> 
     {% csrf_token %}
-    {{ form.as_p }}
-    <button name="submit"> Adicionar </button>
+    {% bootstrap_form form %}
+    {% buttons %}
+        <button name="submit" class="btn btn-primary"> Adicionar </button>
+    {% endbuttons %}
     
     </form>
 
