--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -1,11 +1,18 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
 
-{% block content %}
-    <p>Adicione um novo tópico </p>
-    <form action="{% url 'new_topic' %}" method="post">
+{% block header %}
+    <h2> Adicione um novo tópico </h2>
+{% endblock header %}
+
+{% block content %} 
+    
+    <form action="{% url 'new_topic' %}" method="post" class="form">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="submit"> Adicionar </button>
+        {% bootstrap_form form %}
+        {% buttons%}
+            <button name="submit" class="btn btn-primary"> Adicionar </button>
+        {% endbuttons %}
     </form>
 
 {% endblock content %}
