--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,18 +1,25 @@
 {% extends "learning_logs/base.html" %}
 
+{% block header %}
+    <h1> Tópicos: </h1>
+{% endblock header%}
+
 {% block content %}
 
-    <p>Tópicos:</p>
+    
 
     <ul>
         {% for topic in topics %}
             <li>
-                <a href="{% url 'topic' topic.id %}"> {{ topic }}</a>
+                <h3>
+                    <a href="{% url 'topic' topic.id %}"> {{ topic }}</a>
+                </h3>
             </li> 
         {% empty %}   
             <li>Não há tópicos adicionados.</li> 
         {% endfor %}
     </ul>
-
-    <a href="{% url 'new_topic' %}"> Adicionar novos tópicos </a>
+    <h3>
+        <a href="{% url 'new_topic' %}"> Adicionar novos tópicos </a>
+    </h3>
 {% endblock content %}
